[Fix] Left Alignment - cell padding

--- a/src/sass/_parts/body-cell.sass
+++ b/src/sass/_parts/body-cell.sass
@@ -11,6 +11,9 @@
 	border-bottom: 1px solid $divider
 	box-sizing: border-box
 
+	.alignment---left &
+		padding-left: 0
+
 
 	&-innerwrap
 		display: block
